# TextOnlyBrowser

./: .gitignore  Cargo.toml  ProjectMgmt.md  README.md
.claude/: settings.local.json
src/: app.rs  browser.rs  config.rs  fetcher.rs  history.rs  input.rs  main.rs  parser.rs  renderer.rs  ui.rs
